fixed spacing

--- a/des157/studio2/styles.css
+++ b/des157/studio2/styles.css
@@ -6,7 +6,7 @@ body {
 main {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 70px;
     justify-content: space-between;
     /* background-color: tomato; */
 }
@@ -25,7 +25,7 @@ h1 {
 }
 
 a {
-    font-size: 45px;
+    font-size: 50px;
     text-decoration: none;
     /* background-color: turquoise; */
     -webkit-text-fill-color: transparent;
